Agentforce/force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>AD-275 The ability to capture an Operational Opportunity against an Account or Contract</description>
    <label>Contract</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Contract No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>