Agentforce/force-app/main/default/objects/Contract__c/fields/Account_Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Business_Unit__c</fullName>
    <label>Account Owner Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>