Agentforce/force-app/main/default/objects/Contract__c/fields/Account_Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Country__c</fullName>
    <formula>Account__r.Owner_Country__c</formula>
    <label>Account Owner Country</label>
    <type>Text</type>
</CustomField>