Agentforce/force-app/main/default/objects/Contract__c/fields/Account_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Division__c</fullName>
    <label>Account Owner Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>