Agentforce/force-app/main/default/objects/Contract__c/fields/Account_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Account_Postcode__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Postcode</label>
    <type>Text</type>
</CustomField>