Agentforce/force-app/main/default/objects/Contract__c/fields/Account_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Sector__c</fullName>
    <formula>text(Account__r.OCS_Sub_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sub Sector</label>
    <type>Text</type>
</CustomField>