Agentforce/force-app/main/default/objects/Contract__c/fields/Active_Annual_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Active_Annual_Gross_Margin__c</fullName>
    <label>Active Annual Gross Margin</label>
    <summarizedField>Contract_Line_Item__c.Gross_Margin__c</summarizedField>
    <summaryFilterItems>
        <field>Contract_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>