Agentforce/force-app/main/default/objects/Contract__c/fields/Active_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Active_Annual_Revenue__c</fullName>
    <label>Active Annual Revenue</label>
    <summarizedField>Contract_Line_Item__c.Value__c</summarizedField>
    <summaryFilterItems>
        <field>Contract_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>