Agentforce/force-app/main/default/objects/Contract__c/fields/Active_at_Termination_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Active_at_Termination_Gross_Margin__c</fullName>
    <inlineHelpText>Gross Margin of Contract Lines that were Active at the point of Contract Termination.</inlineHelpText>
    <label>Active at Termination Gross Margin</label>
    <summarizedField>Contract_Line_Item__c.Gross_Margin__c</summarizedField>
    <summaryFilterItems>
        <field>Contract_Line_Item__c.Active_at_Contract_Termination__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>