Agentforce/force-app/main/default/objects/Contract__c/fields/Active_Sites__c.field-meta.xml
<CustomField>
    <fullName>Active_Sites__c</fullName>
    <label>Active Sites</label>
    <type>TextArea</type>
</CustomField>