Agentforce/force-app/main/default/objects/Contract__c/fields/Actual_Annual_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_Annual_Gross_Margin__c</fullName>
    <description>When Status = Mobilisation, return Pending + Active Annual Gross Margin. When Status = Terminated return Active at Termination Annual Gross Margin. All other statuses return Active Annual Gross Margin.</description>
    <formula>CASE( Status__c,
&quot;Mobilisation&quot;, Pending_Annual_Gross_Margin__c + Active_Annual_Gross_Margin__c,
&quot;Terminated&quot;, Active_at_Termination_Gross_Margin__c,
Active_Annual_Gross_Margin__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Note: Actual Values do not include Pending Line Items outside of the Mobilisation Contract Status.</inlineHelpText>
    <label>Actual Annual Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>