Agentforce/force-app/main/default/objects/Contract__c/fields/Actual_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Annual_Revenue__c</fullName>
    <description>When Status = Mobilisation return Pending + Active Annual Revenue, when Terminated return Active at Termination Annual Revenue. For all other statuses return Active Annual Revenue.</description>
    <formula>CASE( Status__c,
					&quot;Mobilisation&quot;, Pending_Annual_Revenue__c + Active_Annual_Revenue__c,
					&quot;Terminated&quot;, Active_at_Termination_Annual_Revenue__c,
					Active_Annual_Revenue__c
					)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Note: Actual Values do not include Pending Line Items outside of the Mobilisation Contract Status.</inlineHelpText>
    <label>Actual Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>