Agentforce/force-app/main/default/objects/Contract__c/fields/Actual_GM_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Actual_GM_Percentage__c</fullName>
    <formula>CASE( Status__c,
&quot;Mobilisation&quot;, 
					IF( Pending_Annual_Revenue__c = 0 &amp;&amp; Active_Annual_Revenue__c = 0, 0, (Pending_Annual_Gross_Margin__c + Active_Annual_Gross_Margin__c) / (Pending_Annual_Revenue__c + Active_Annual_Revenue__c)),
					
/* Above: Where Status = Mobilisation calculate the GM% using Pending + Active values. */
					
&quot;Terminated&quot;,
					IF( Active_at_Termination_Annual_Revenue__c = 0, 0, Active_at_Termination_Gross_Margin__c / Active_at_Termination_Annual_Revenue__c),
					
/* Above: Where Status = Terminated calculate GM% using Active at Termination Values */
					
/* Below: For all other Statuses calculate GM% using Active values */
					
IF( Active_Annual_Revenue__c = 0, 0, Active_Annual_Gross_Margin__c / Active_Annual_Revenue__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Note: Actual Values do not include Pending Line Items outside of the Mobilisation Contract Status.</inlineHelpText>
    <label>Actual GM%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>