Agentforce/force-app/main/default/objects/Contract__c/fields/Bid_Costing__c.field-meta.xml
<CustomField>
    <fullName>Bid_Costing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Costing</label>
    <type>Checkbox</type>
</CustomField>