Agentforce/force-app/main/default/objects/Contract__c/fields/Bid_Document__c.field-meta.xml
<CustomField>
    <fullName>Bid_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Document</label>
    <type>Checkbox</type>
</CustomField>