Agentforce/force-app/main/default/objects/Contract__c/fields/Budget_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Budget_Annual_Value__c</fullName>
    <description>Opportunity Annual Revenue when created</description>
    <label>Budget Annual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>