Agentforce/force-app/main/default/objects/Contract__c/fields/Budget_GM_Percent__c.field-meta.xml
<CustomField>
    <fullName>Budget_GM_Percent__c</fullName>
    <label>Budget GM %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>