Agentforce/force-app/main/default/objects/Contract__c/fields/Budget_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Budget_Gross_Margin__c</fullName>
    <label>Budget Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>