Agentforce/force-app/main/default/objects/Contract__c/fields/Budget_Value__c.field-meta.xml
<CustomField>
    <fullName>Budget_Value__c</fullName>
    <label>Budget Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>