Agentforce/force-app/main/default/objects/Contract__c/fields/Budget_Value_Check__c.field-meta.xml
<CustomField>
    <fullName>Budget_Value_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Value Check</label>
    <type>Checkbox</type>
</CustomField>