Agentforce/force-app/main/default/objects/Contract__c/fields/CAFM_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>CAFM_Contract_ID__c</fullName>
    <label>CAFM Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>