Agentforce/force-app/main/default/objects/Contract__c/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation</label>
    <type>Checkbox</type>
</CustomField>