Agentforce/force-app/main/default/objects/Contract__c/fields/Contact_PhoneNo__c.field-meta.xml
<CustomField>
    <fullName>Contact_PhoneNo__c</fullName>
    <label>Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>