Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Contract_Action_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Surface and Hide button</description>
    <label>Contract Action Plan</label>
    <type>Checkbox</type>
</CustomField>