Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Attached__c.field-meta.xml
<CustomField>
    <fullName>Contract_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Attached</label>
    <type>Checkbox</type>
</CustomField>