Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_End_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Risk_Comment__c</fullName>
    <label>Contract End Risk Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>