Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_End_Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Risk_Probability__c</fullName>
    <description>AD-832 likelihood of the &apos;Contract End Risk&apos; occurring</description>
    <label>Contract End Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Likelihood</valueSetName>
    </valueSet>
</CustomField>