Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Last_Renewed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Last_Renewed__c</fullName>
    <label>Contract Last Renewed</label>
    <type>Date</type>
</CustomField>