Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <inlineHelpText>Set automatically by the system based on Account Name (Known As name if provided), Owner Business Unit and Reference</inlineHelpText>
    <label>Contract Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>