Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Orderbook__c.field-meta.xml
<CustomField>
    <fullName>Contract_Orderbook__c</fullName>
    <formula>if( Contract_End_Date__c - today()&lt;0,0,( Contract_End_Date__c - today())*( Active_Annual_Revenue__c /365))</formula>
    <label>Contract Orderbook</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>