Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to contact Contract Owner Manager when Owner is inactive</description>
    <label>Contract Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>