Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Region__c.field-meta.xml
<CustomField>
    <fullName>Contract_Region__c</fullName>
    <label>Contract Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
                <label>APAC &amp; ME</label>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>UK&amp;I</fullName>
                <label>UK &amp; IRE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>