Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Term_String__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_String__c</fullName>
    <formula>IF(Contract_End_Date__c - Contract_Start_Date__c &gt;= 364,
IF(ISBLANK(Contract_Term_Years__c), NULL,TEXT(Contract_Term_Years__c) &amp; &quot; Year&quot; &amp;
IF(
OR(Contract_End_Date__c - Contract_Start_Date__c &gt;= 729,
Contract_End_Date__c - Contract_Start_Date__c &lt; 364
),
&quot;s&quot;, NULL))
, NULL) &amp;
IF(
				OR(
								Contract_Term_Months__c != 0,
								Contract_End_Date__c - Contract_Start_Date__c &lt; 30
								),
				&quot; &quot; &amp; TEXT(Contract_Term_Months__c) &amp; &quot; Months&quot;, NULL)</formula>
    <label>Contract Term</label>
    <type>Text</type>
</CustomField>