Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Term_Yrs__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Yrs__c</fullName>
    <description>AD-737 to create a &apos;re-bid&apos; Opportunity prior to the end of the &apos;Contract End Date&apos;</description>
    <label>Contract Term (Yrs)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>