Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Terms</label>
    <referenceTo>Contract_Terms__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>