Agentforce/force-app/main/default/objects/Contract__c/fields/Contract_Unlocatable__c.field-meta.xml
<CustomField>
    <fullName>Contract_Unlocatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Unlocatable</label>
    <type>Checkbox</type>
</CustomField>