Agentforce/force-app/main/default/objects/Contract__c/fields/ContractCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>ContractCaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>ContractCaseSafeID</label>
    <type>Text</type>
</CustomField>