Agentforce/force-app/main/default/objects/Contract__c/fields/Contracted_Services__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Services__c</fullName>
    <label>Contracted Services</label>
    <type>TextArea</type>
</CustomField>