Agentforce/force-app/main/default/objects/Contract__c/fields/Count_of_Open_Rebid_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Open_Rebid_Opportunities__c</fullName>
    <description>Populated by DLRS. Count of Open Rebid Opportunities related to this Contract.</description>
    <label># Open Rebid Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>