Agentforce/force-app/main/default/objects/Contract__c/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Owner</label>
    <type>Checkbox</type>
</CustomField>