Agentforce/force-app/main/default/objects/Contract__c/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <description>Displays the External ID of the Account</description>
    <formula>Account__r.External_Id__c</formula>
    <label>Customer No</label>
    <type>Text</type>
</CustomField>