Agentforce/force-app/main/default/objects/Contract__c/fields/Customer_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Signed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Customer Signed By)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>