Agentforce/force-app/main/default/objects/Contract__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <description>AD-431 - Tracks the number of days between todays date and the contract end date</description>
    <formula>IF(Contract_End_Date__c &gt; TODAY(),Contract_End_Date__c -  TODAY(),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>