Agentforce/force-app/main/default/objects/Contract__c/fields/Delivery_Against_Tender_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Against_Tender_Risk_Comment__c</fullName>
    <label>Delivery Against Tender Risk Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>