Agentforce/force-app/main/default/objects/Contract__c/fields/Delivery_Against_Tender_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Against_Tender_Risk_Score__c</fullName>
    <formula>CASE(TEXT(Delivery_Against_Tender_Risk__c),
&quot;Very Low&quot;, 1,
&quot;Low&quot;, 2,
&quot;Moderate&quot;, 3,
&quot;High&quot;, 4,
&quot;Very High&quot;, 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Against Tender Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>