Agentforce/force-app/main/default/objects/Contract__c/fields/Demobilised__c.field-meta.xml
<CustomField>
    <fullName>Demobilised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demobilised</label>
    <type>Checkbox</type>
</CustomField>