Agentforce/force-app/main/default/objects/Contract__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>AD-807 To provide an overview of the contract</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>