Agentforce/force-app/main/default/objects/Contract__c/fields/Domestic_Ultimate_DUNS__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_DUNS__c</fullName>
    <formula>Account__r.Domestic_Ultimate_Account_Link__r.DUNS_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domestic Ultimate DUNS</label>
    <type>Text</type>
</CustomField>