Agentforce/force-app/main/default/objects/Contract__c/fields/End_Date_at_Termination__c.field-meta.xml
<CustomField>
    <fullName>End_Date_at_Termination__c</fullName>
    <label>End Date at Termination</label>
    <type>Date</type>
</CustomField>