Agentforce/force-app/main/default/objects/Contract__c/fields/End_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Year__c</fullName>
    <formula>YEAR(Contract_End_Date__c)</formula>
    <label>End Date Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>