Agentforce/force-app/main/default/objects/Contract__c/fields/Extension_option_2_Term_Yrs__c.field-meta.xml
<CustomField>
    <fullName>Extension_option_2_Term_Yrs__c</fullName>
    <label>Extension option 2 Term (Yrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>